# lettr-python

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.claude/plans/: there-are-changes-in-idempotent-star.md
.github/workflows/: ci.yml  publish.yml
src/lettr/: __init__.py  _client.py  _exceptions.py  _types.py
src/lettr/resources/: __init__.py  domains.py  emails.py  projects.py  templates.py  webhooks.py
tests/: conftest.py  test_client.py  test_domains.py  test_emails.py  test_exceptions.py  test_lettr.py  test_projects.py  test_templates.py  test_types.py  test_webhooks.py
