[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lettr"
version = "0.2.0"
description = "Official Python SDK for the Lettr Email API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Lettr", email = "support@lettr.com" },
]
keywords = ["email", "transactional", "lettr", "api", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://lettr.com"
Documentation = "https://lettr.com/docs"
Repository = "https://github.com/lettr/lettr-python"
Issues = "https://github.com/lettr/lettr-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/lettr"]

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
